--- a/api/sqlx-macros/Cargo.toml
+++ b/api/sqlx-macros/Cargo.toml
@@ -13,5 +13,5 @@ darling = "0.14.1"
 proc-macro-error = "1.0.4"
 proc-macro2 = "1.0.42"
 quote = "1.0.20"
-sqlx = { version = "0.6.0", features = ["postgres", "runtime-actix-rustls", "chrono"], default-features = false }
+sqlx = { version = "0.6.0", features = ["macros", "postgres", "runtime-actix-rustls", "chrono"], default-features = false }
 syn = { version = "1.0.98", features = ["full", "extra-traits"] }
