--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -32,3 +32,5 @@ serde = { version = "1.0.140", features = ["derive"] }
 getset = "0.1.2"
 serenity = { version = "0.11.4", features = ["rustls_backend", "model"], default-features = false }
 yup-oauth2 = "7.0.1"
+chrono = "0.4.19"
+icalendar = "0.13.0"
