--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -34,3 +34,6 @@ serenity = { version = "0.11.4", features = ["rustls_backend", "model"], default
 yup-oauth2 = "7.0.1"
 chrono = "0.4.19"
 icalendar = "0.13.0"
+serde_json = "1.0.82"
+serde_repr = "0.1.9"
+async-stripe = { version = "0.15.0", features = ["runtime-tokio-hyper"] }
