--- a/web/package.json
+++ b/web/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "cross-env PORT=6655 HOST=0.0.0.0 nuxt dev",
+    "dev": "nuxt dev -p=6655",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "analyze": "cross-env PORT=6655 nuxt analyze",
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@mdi/font": "^7.0.96",
     "@mdi/js": "^7.0.96",
+    "@nuxt/content": "^2.0.1",
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
     "@types/stripe": "^8.0.417",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
@@ -26,7 +27,7 @@
     "discord.js": "^14.0.3",
     "eslint": "^8.20.0",
     "eslint-plugin-vue": "^9.3.0",
-    "nuxt": "3.0.0-rc.6",
+    "nuxt": "3.0.0-rc.8",
     "nuxt-proxy": "^0.2.3",
     "patch-package": "^6.4.7",
     "prettier": "^2.7.1",
