--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "@mdi/js": "^7.0.96",
     "@nuxt/content": "^2.0.1",
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
+    "@types/lodash": "^4.14.184",
     "@types/stripe": "^8.0.417",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
@@ -27,6 +28,8 @@
     "discord.js": "^14.0.3",
     "eslint": "^8.20.0",
     "eslint-plugin-vue": "^9.3.0",
+    "lodash": "^4.17.21",
+    "microcms-js-sdk": "^2.2.1",
     "nuxt": "3.0.0-rc.8",
     "nuxt-proxy": "^0.2.3",
     "patch-package": "^6.4.7",
